@@ -44,6 +44,7 @@
 /****************************************************************************/
 
 #undef free
+#undef __free
 
 /****************************************************************************/
 
@@ -495,7 +496,7 @@ __force_free(void * ptr,const char * file,int line)
 
 /****************************************************************************/
 
-void
+__static void
 __free(void * ptr,const char * file,int line)
 {
 	if(ptr != NULL)
@@ -504,11 +505,19 @@ __free(void * ptr,const char * file,int line)
 
 /****************************************************************************/
 
+#if NOT defined(__MEM_DEBUG)
+
+/****************************************************************************/
+
 void
 free(void * ptr)
 {
 	__free(ptr,NULL,0);
 }
+
+/****************************************************************************/
+
+#endif /* __MEM_DEBUG */
 
 /****************************************************************************/
 
