@@ -44,6 +44,7 @@
 /****************************************************************************/
 
 #undef malloc
+#undef __malloc
 
 /****************************************************************************/
 
@@ -206,7 +207,7 @@ __allocate_memory(size_t size,BOOL never_free,const char * UNUSED file,int UNUSE
 
 /****************************************************************************/
 
-void *
+__static void *
 __malloc(size_t size,const char * file,int line)
 {
 	void * result = NULL;
@@ -249,6 +250,10 @@ __malloc(size_t size,const char * file,int line)
 
 /****************************************************************************/
 
+#if NOT defined(__MEM_DEBUG)
+
+/****************************************************************************/
+
 void *
 malloc(size_t size)
 {
@@ -258,6 +263,11 @@ malloc(size_t size)
 
 	return(result);
 }
+
+
+/****************************************************************************/
+
+#endif /* __MEM_DEBUG */
 
 /****************************************************************************/
 
